# RNMP_homework3

./: .gitignore  README.md  main_shell_script.sh  pyproject.toml
data/: get_data_script.sh  split_data.py
infrastructure/: kafka-docker-compose.yml  spark-docker-compose.yml
model/: best_model_script.py
scripts/: consume_kafka_msgs.py  make_predictions_spark_script.py  produce_kafka_msgs.py  start_stream.sh
